--- a/component-library/components/image-with-text/image-with-text.bookshop.toml
+++ b/component-library/components/image-with-text/image-with-text.bookshop.toml
@@ -1,5 +1,5 @@
 [component]
-array_structures = [ "content_blocks" ]
+structures = [ "content_blocks" ]
 label = "Image with Text"
 description = "A two column image and rich text block"
 icon = "wysiwyg"
