--- a/package.json
+++ b/package.json
@@ -1,31 +1,28 @@
 {
-  "name": "hydra-jekyll-bookshop",
+  "name": "page-builder-example-jekyll",
   "private": true,
-  "description": "An website template built by CloudCannon",
+  "description": "A page builder example for Jekyll and Bookshop, tailored to CloudCannon",
   "scripts": {
-    "bookshop-dev": "bookshop-browser -p 6061 -b ./bookshop-components",
-    "bookshop-live": "bookshop-live -b ./bookshop-components -o site/_cloudcannon/bookshop-live.js",
-    "jekyll": "BUNDLE_GEMFILE=site/Gemfile bundle exec jekyll serve --source site --port 6060 --trace --unpublished",
-    "start": "run-p bookshop-dev jekyll",
-    "postinstall": "mkdir -p site/node_modules/.bin/ && ln -sf ../../../node_modules/.bin/postcss site/node_modules/.bin/postcss"
+    "bookshop-dev": "bookshop-browser -b component-library -p 6061",
+    "bookshop-hosted": "bookshop-browser -b component-library -o site/assets/bookshop-hosted.js",
+    "bookshop-live": "bookshop-live -b component-library -o site/_cloudcannon/bookshop-live.js",
+    "jekyll": "bundle exec jekyll serve --port 6060 --trace --unpublished",
+    "start": "run-p bookshop-dev jekyll"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CloudCannon/hydra-jekyll-bookshop-template.git"
+    "url": "git+https://github.com/CloudCannon/page-builder-example-jekyll.git"
   },
-  "author": "",
+  "author": "CloudCannon",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/CloudCannon/hydra-jekyll-bookshop-template/issues"
+    "url": "https://github.com/CloudCannon/page-builder-example-jekyll/issues"
   },
-  "homepage": "https://github.com/CloudCannon/hydra-jekyll-bookshop-template#readme",
+  "homepage": "https://github.com/CloudCannon/page-builder-example-jekyll#readme",
   "devDependencies": {
-    "@bookshop/browser": "^2.0.0-beta.20",
-    "@bookshop/live": "^2.0.0-beta.20",
-    "@bookshop/jekyll-engine": "^2.0.0-beta.20",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.3.5",
-    "postcss-cli": "^8.3.1",
-    "postcss-fluidvars": "^1.1.1"
+    "@bookshop/browser": "^2.0.1",
+    "@bookshop/jekyll-engine": "^2.0.1",
+    "@bookshop/live": "^2.0.1",
+    "npm-run-all": "^4.1.5"
   }
 }
